--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -139,11 +139,11 @@
     "        self.age = age\n",
     "        self.weight = weight \n",
     "        self.height = height \n",
-    "    #class method\n",
+    "    #instance method 1\n",
     "    def eat(self):\n",
     "        return '{} is eating a banana.'.format(self.name)\n",
+    " \n",
     "    \n",
-    "#class method\n",
     "print(kingkong.eat())\n",
     "print(donkeykong.eat())\n",
     "      \n",
@@ -160,7 +160,10 @@
     "```python\n",
     "\n",
     "class Gorilla: \n",
-    "        #class attribute \n",
+    "    \n",
+    "    n = 180 #class variables prove to be useful later\n",
+    "    \n",
+    "    #class attribute \n",
     "    species = \"Gorilla\"\n",
     "    #instance attribute\n",
     "    def __init__(self, name, age, weight, height):\n",
@@ -168,26 +171,28 @@
     "        self.age = age\n",
     "        self.weight = weight \n",
     "        self.height = height \n",
-    "    #class method\n",
+    "    #instance method 1\n",
     "    def eat(self):\n",
     "        return '{} is eating a banana.'.format(self.name)\n",
-    "    #instance method\n",
+    "    #instance method 2\n",
     "    def bananacount(self):\n",
     "        if self.weight > 200:\n",
     "            banana = 400\n",
     "        else:\n",
-    "            banana = 250\n",
-    "        return '{} eats {} bananas'.format(self.name, banana)\n",
-    "    \n",
+    "            banana = n\n",
+    "        return '{} eats {} bananas a day.'.format(self.name, banana)\n",
+    "\n",
+    "print(kingkong.bananacount())\n",
+    "print(donkeykong.bananacount())\n",
     "```\n",
     "\n",
     "This returns:\n",
     "\n",
-    "King Kong eats 250 bananas  \n",
-    "Donkey Kong eats 400 bananas\n",
+    "King Kong eats 180 bananas a day. \n",
+    "Donkey Kong eats 400 bananas a day.\n",
     "\n",
-    "- We can also use __special methods__ that will rewrite existing standard functions such as print()\n",
-    "- interract with eachother (for example hierarchy)\n",
+    "- We can also use __special methods__ that will rewrite existing standard functions such as print() #TO BE ADDED BY JULIA BY WED MORNING\n",
+    "- interract with eachother (for example hierarchy) #TO BE ADDED BY JULIA BY WED MORNING\n",
     "\n",
     "## Four Fundamental Principles of Object-oriented Programming\n",
     "\n",
@@ -238,7 +243,62 @@
     "\n",
     "### Inheritance\n",
     "\n",
-    "**Inheritance** refers to how an Object-oriented programming language allows the creation of new (child) subclasses using the details of an existing (parent) class. Inheritance is closely associated with the concept of **Abstraction** as it allows programmers to reuse the attributes and methods of the parent class while adding only what is necessary and relevant for each child class.\n",
+    "**Inheritance** refers to how an Object-oriented programming language allows the creation of new (child) subclasses using the details of an existing (parent) class. Inheritance is closely associated with the concept of **Abstraction** as it allows programmers to reuse the attributes and methods of the parent class while adding only what is necessary and relevant for each child class. Creating a child class is easy:\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "class Human(Gorilla): #Specifying what class to inherit from\n",
+    "    pass\n",
+    "\n",
+    "johnsmith = Human(\"John Smith\", 35, 70, 1.7) # intantiating\n",
+    "\n",
+    "print(johnsmith)\n",
+    "\n",
+    "This returns:\n",
+    "    \n",
+    "#TO BE ADDED BY JULIA BY WED MORNING\n",
+    "    \n",
+    "```\n",
+    "By simply inheriting from the parent class, we have inherited all its functionality. Python will travel up the inheritance chain (Human to Gorilla) until it finds the called method (init) to be executed. Let's now customize our sub class a little bit: \n",
+    "\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "class Human(Gorilla):\n",
+    "    #adding a new attribute\n",
+    "    def __init__(self, name, age, weight, height, IQ):\n",
+    "        #Calling the parents init methods\n",
+    "        super().__init__(name, age, weight) \n",
+    "        #Call the new subclass specific attribute\n",
+    "        self.IQ = IQ\n",
+    "\n",
+    "johnsmith = Human(\"John Smith\", 35, 70, 1.7, 140) \n",
+    "\n",
+    "print(johnsmith)\n",
+    "\n",
+    "This now returns:\n",
+    "\n",
+    "#TO BE ADDED BY JULIA BY WED MORNING\n",
+    "\n",
+    "```\n",
+    "Adding methods for the child class is no different than adding methods for the parent class. It is not possible to remove inherited attributes, variables and methods from the sub class, as they do not exist in the sub class. But you can overwrite them:\n",
+    "\n",
+    "```python\n",
+    "class Human(Gorilla):\n",
+    "    \n",
+    "    n = 2 #Overwriting the class variable\n",
+    "    \n",
+    "    def eat(self):\n",
+    "        return '{} is eating a donut.'.format(self.name) #instead of a banana\n",
+    "\n",
+    "print(johnsmith.eat())\n",
+    "print(johnsmith.bananacount())\n",
+    "```\n",
+    "This returns:\n",
+    "\n",
+    "John Smith is eating a donut.\n",
+    "John Smith eats 2 bananas a day.\n",
+    "\n",
     "\n",
     "### Polymorphism  \n",
     "\n",
