--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -239,18 +239,20 @@
     "\n",
     "### Abstraction\n",
     "\n",
-    "**Abstraction** refers to the principle of only putting specifically relevant information in a class. Other information that is only partly relevant should be placed in a subclass (see **Inheritance**). This also benefits the maintanence of large codebases, as changes can be contained within each object.\n",
+    "Abstraction refers to the principle of displaying essential information by hiding unnecessary information. This is done by creating sub-classes for this unnecessary information. This isolation of the information is similar to encapsulation in the aspect of how it is achieved (creating specific sub-classes), but it has its own purpose: simplicity.  \n",
+    "This principle may not seem advantageous at first glance, why would we want to hide information about how the tasks of our program are achieved? How exactly does this reduce complexity?   Let's consider a TV remote, do we know exactly how each of the buttons on our remote functions in everyday usage? Should we be reminded at every press of a button on our remote, that we are making the underlying chip's sensor go off, producing a morse-line code which is amplified with a transistor, then sent through a LED which finally prompts an infrared light to communicate with our TV?  \n",
+    "What matters to us is that the power button correctly prompts the power, that the volume button changes the volume, and that the channel changes when we use the button to change channels. The inner-workings of these buttons do not need to be apparent in the common usage of our remote. This is the exact point of abstraction, reducing complexity. Through abstraction we are also able to isolate parts of our code, making its maintenance more efficient by ensuring changes are to be made locally. \n",
     "\n",
     "### Inheritance\n",
     "\n",
-    "**Inheritance** refers to how an Object-oriented programming language allows the creation of new (child) subclasses using the details of an existing (parent) class. Inheritance is closely associated with the concept of **Abstraction** as it allows programmers to reuse the attributes and methods of the parent class while adding only what is necessary and relevant for each child class. Creating a child class is easy:\n",
+    "**Inheritance** refers to how an Object-oriented programming language allows the creation of child subclass using the characteristics of an existing parent or super class. In other words, the child class can inherit attributes from the parent class. Creating a child class is easy:\n",
     "\n",
     "```python\n",
     "\n",
     "class Human(Gorilla): #Specifying what class to inherit from\n",
     "    pass\n",
     "\n",
-    "johnsmith = Human(\"John Smith\", 35, 70, 1.7) # intantiating\n",
+    "johnsmith = Human(\"John Smith\", 35, 70, 1.7) # instantiating\n",
     "\n",
     "print(johnsmith)\n",
     "\n",
@@ -302,7 +304,7 @@
     "\n",
     "### Polymorphism  \n",
     "\n",
-    "Polymorphism is one of the 4 pillars of OOP, it allows our program to process information differently based on their data type, i.e. one class will react differently to another when processing certain data. This is achieved through the usage of a generic interface. Let's illustrate by an example. \n",
+    "Polymorphism is one of the 4 pillars of OOP, it allows our program to process information differently based on their data type. This is achieved through the usage of a generic interface. Let's illustrate by an example. \n",
     "\n",
     "```python\n",
     "#creation first class\n",
@@ -337,7 +339,10 @@
     "Dolphins can't sing, silly.  \n",
     "\\*Sings Despacito*\n",
     "\n",
-    "We have defined two different classes, Dolphin() and Gorilla(), each with their own sing() method. We then defined a generic interface singing(), for the input of any object. Then, passing our two objects, dolphin1 and gorilla1 through this interface, we get differing output, depending on the class of our input. In the case of the Gorilla, it is able to sing. Because gorillas can sing. Duh. Well only Despacito. In the case of our Dolphin, it is sadly unable to sing. \n"
+    "We have defined two different classes, Dolphin() and Gorilla(), each with their own sing() method. We then defined a generic interface singing(), for the input of any object. Then, passing our two objects, dolphin1 and gorilla1 through this interface, we get differing output, depending on the class of our input. In the case of the Gorilla, it is able to sing. Because gorillas can sing. Duh. Well only Despacito. In the case of our Dolphin, it is sadly unable to sing.  \n",
+    "The generic interface serves a similar purpose as a switchboard. We are now able to enter the sing() function of both Gorillas and Dolphins into this interface, which then directs our program to the correct class, allowing it to differentiate the singing() function for our data type, depending on whether it is a Gorilla and Dolphin. Differentiation of our objects is the main strength of Polymorphism. \n",
+    "\n",
+    "The principles of Inheritance and Polymorphism are complementary. While Inheritance allows our sub-classes to inherit the **same** attributes and methods as a parent or super-class, Polymorphism allows for these to **differ** depending on which sub-class they are from. "
    ]
   },
   {
