--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -133,12 +133,13 @@
     "class Gorilla: \n",
     "    #class attribute \n",
     "    species = \"Gorilla\"\n",
+    "    \n",
     "    #instance attribute\n",
-    "    def __init__(self, name, age, weight, height):\n",
+    "    def __init__(self, name, age, weight):\n",
     "        self.name = name \n",
     "        self.age = age\n",
     "        self.weight = weight \n",
-    "        self.height = height \n",
+    "\n",
     "    #instance method 1\n",
     "    def eat(self):\n",
     "        return '{} is eating a banana.'.format(self.name)\n",
@@ -165,15 +166,18 @@
     "    \n",
     "    #class attribute \n",
     "    species = \"Gorilla\"\n",
+    "    \n",
     "    #instance attribute\n",
-    "    def __init__(self, name, age, weight, height):\n",
+    "    def __init__(self, name, age, weight):\n",
     "        self.name = name \n",
     "        self.age = age\n",
     "        self.weight = weight \n",
     "        self.height = height \n",
+    "        \n",
     "    #instance method 1\n",
     "    def eat(self):\n",
     "        return '{} is eating a banana.'.format(self.name)\n",
+    "    \n",
     "    #instance method 2\n",
     "    def bananacount(self):\n",
     "        if self.weight > 200:\n",
@@ -191,8 +195,35 @@
     "King Kong eats 180 bananas a day. \n",
     "Donkey Kong eats 400 bananas a day.\n",
     "\n",
-    "- We can also use __special methods__ that will rewrite existing standard functions such as print() #TO BE ADDED BY JULIA BY WED MORNING\n",
-    "- interract with eachother (for example hierarchy) #TO BE ADDED BY JULIA BY WED MORNING\n",
+    "We can also use __special methods__, which will rewrite existing standard functions. For example, using the print() function on King Kong will return to where the object points to in memory.\n",
+    "\n",
+    "```python\n",
+    "print(kingkong)\n",
+    "\n",
+    "```\n",
+    "\n",
+    "This returns:\n",
+    "\n",
+    "<__main__.Gorilla object at 0x0000028F7BFB6470>\n",
+    "\n",
+    "\n",
+    "When you use the function, Python calls the built-in function __str__. We can change the printing behaviour of the object by overwriting __str__ in our class:\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "class Gorilla: \n",
+    "    def __str__(self):\n",
+    "         return '<{}>,<{}>,<{}>'.format(self.name, self.age, self.weight)\n",
+    "\n",
+    "print(kingkong)\n",
+    "```\n",
+    "This returns:\n",
+    "\n",
+    "\\<King Kong>,<15>,<170>\n",
+    "\n",
+    "Our newly defined method returns a little summary of the object when you print it. This makes it a lot more user-friendly. \n",
+    "    \n",
     "\n",
     "## Four Fundamental Principles of Object-oriented Programming\n",
     "\n",
@@ -245,20 +276,48 @@
     "\n",
     "### Inheritance\n",
     "\n",
-    "**Inheritance** refers to how an Object-oriented programming language allows the creation of child subclass using the characteristics of an existing parent or super class. In other words, the child class can inherit attributes from the parent class. Creating a child class is easy:\n",
+    "**Inheritance** refers to how an Object-oriented programming language allows the creation of child subclass using the characteristics of an existing parent or super class. In other words, the child class can inherit attributes from the parent class. \n",
+    "\n",
+    "Remember this is our parent class:\n",
+    "\n",
+    "```python\n",
+    "class Gorilla: \n",
+    "    \n",
+    "    n = 180\n",
+    "    \n",
+    "    species = \"Gorilla\"\n",
+    "\n",
+    "    def __init__(self, name, age, weight):\n",
+    "        self.name = name \n",
+    "        self.age = age\n",
+    "        self.weight = weight \n",
+    "\n",
+    "    def eat(self):\n",
+    "        return '{} is eating a banana.'.format(self.name)\n",
+    "\n",
+    "    def bananacount(self):\n",
+    "        if self.weight > 200:\n",
+    "            banana = 400\n",
+    "        else:\n",
+    "            banana = n\n",
+    "        return '{} eats {} bananas a day.'.format(self.name, banana)\n",
+    "\n",
+    "```\n",
+    "\n",
+    "And now we´re creating a child class:\n",
     "\n",
     "```python\n",
     "\n",
     "class Human(Gorilla): #Specifying what class to inherit from\n",
     "    pass\n",
     "\n",
-    "johnsmith = Human(\"John Smith\", 35, 70, 1.7) # instantiating\n",
+    "human1 = Human(\"Adam Smith\", 35, 70) # instantiating\n",
     "\n",
-    "print(johnsmith)\n",
+    "print(human1)\n",
     "\n",
     "This returns:\n",
     "    \n",
-    "#TO BE ADDED BY JULIA BY WED MORNING\n",
+    "\\<Adam Smith>,<35>,<70>\n",
     "    \n",
     "```\n",
     "By simply inheriting from the parent class, we have inherited all its functionality. Python will travel up the inheritance chain (Human to Gorilla) until it finds the called method (init) to be executed. Let's now customize our sub class a little bit: \n",
@@ -268,22 +327,23 @@
     "\n",
     "class Human(Gorilla):\n",
     "    #adding a new attribute\n",
-    "    def __init__(self, name, age, weight, height, IQ):\n",
-    "        #Calling the parents init methods\n",
-    "        super().__init__(name, age, weight) \n",
-    "        #Call the new subclass specific attribute\n",
-    "        self.IQ = IQ\n",
+    "    def __init__(self, name, age, weight, IQ):\n",
+    "        super().__init__(name, age, weight)  #Calling the parents init methods        \n",
+    "        self.IQ = IQ  #Call the new subclass specific attribute\n",
     "\n",
-    "johnsmith = Human(\"John Smith\", 35, 70, 1.7, 140) \n",
+    "human2 = Human(\"Eva Smith\", 30, 60, 140) \n",
     "\n",
-    "print(johnsmith)\n",
-    "\n",
-    "This now returns:\n",
-    "\n",
-    "#TO BE ADDED BY JULIA BY WED MORNING\n",
+    "print(human2.IQ)\n",
     "\n",
     "```\n",
+    "\n",
+    "This now returns:\n",
+    "    \n",
+    "140\n",
+    "\n",
+    "\n",
     "Adding methods for the child class is no different than adding methods for the parent class. It is not possible to remove inherited attributes, variables and methods from the sub class, as they do not exist in the sub class. But you can overwrite them:\n",
+    "\n",
     "\n",
     "```python\n",
     "class Human(Gorilla):\n",
@@ -293,13 +353,13 @@
     "    def eat(self):\n",
     "        return '{} is eating a donut.'.format(self.name) #instead of a banana\n",
     "\n",
-    "print(johnsmith.eat())\n",
-    "print(johnsmith.bananacount())\n",
+    "print(human1.eat())\n",
+    "print(human1.bananacount())\n",
     "```\n",
     "This returns:\n",
     "\n",
-    "John Smith is eating a donut.\n",
-    "John Smith eats 2 bananas a day.\n",
+    "Adam Smith is eating a donut.\n",
+    "Adam Smith eats 2 bananas a day.\n",
     "\n",
     "\n",
     "### Polymorphism  \n",
