--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -276,7 +276,8 @@
     "\n",
     "### Inheritance\n",
     "\n",
-    "**Inheritance** refers to how an Object-oriented programming language allows the creation of child subclass using the characteristics of an existing parent or super class. In other words, the child class can inherit attributes from the parent class. \n",
+    "**Inheritance** refers to how an Object-oriented programming language allows the creation of child subclass using the characteristics of an existing parent or super class. In other words, the child class can inherit attributes from the parent class. By simply inheriting from the parent class, we have inherited all its functionality. Python will travel up the inheritance chain (Human to Gorilla) until it finds the called method (init) to be executed. Let's now customize our sub class a little bit. Adding methods for the child class is no different than adding methods for the parent class. It is not possible to remove inherited attributes, variables and methods from the sub class, as they do not exist in the sub class. But you can overwrite them:\n",
+    "\n",
     "\n",
     "Remember this is our parent class:\n",
     "\n",
@@ -291,73 +292,38 @@
     "        self.name = name \n",
     "        self.age = age\n",
     "        self.weight = weight \n",
-    "\n",
     "    def eat(self):\n",
     "        return '{} is eating a banana.'.format(self.name)\n",
-    "\n",
     "    def bananacount(self):\n",
     "        if self.weight > 200:\n",
     "            banana = 400\n",
     "        else:\n",
     "            banana = n\n",
     "        return '{} eats {} bananas a day.'.format(self.name, banana)\n",
-    "\n",
-    "```\n",
-    "\n",
-    "And now we´re creating a child class:\n",
-    "\n",
-    "```python\n",
-    "\n",
-    "class Human(Gorilla): #Specifying what class to inherit from\n",
-    "    pass\n",
-    "\n",
-    "human1 = Human(\"Adam Smith\", 35, 70) # instantiating\n",
-    "\n",
-    "print(human1)\n",
-    "\n",
-    "This returns:\n",
-    "    \n",
-    "\\<Adam Smith>,<35>,<70>\n",
-    "    \n",
-    "```\n",
-    "By simply inheriting from the parent class, we have inherited all its functionality. Python will travel up the inheritance chain (Human to Gorilla) until it finds the called method (init) to be executed. Let's now customize our sub class a little bit: \n",
-    "\n",
-    "\n",
-    "```python\n",
-    "\n",
-    "class Human(Gorilla):\n",
-    "    #adding a new attribute\n",
+    "#Specifying what class to inherit from    \n",
+    "class Human(Gorilla): \n",
+    "    #Overwriting the class variable\n",
+    "    n = 2 \n",
+    "#adding a new attribute\n",
     "    def __init__(self, name, age, weight, IQ):\n",
-    "        super().__init__(name, age, weight)  #Calling the parents init methods        \n",
-    "        self.IQ = IQ  #Call the new subclass specific attribute\n",
-    "\n",
+    "        #Calling the parents init methods  \n",
+    "        super().__init__(name, age, weight)  \n",
+    "        #Call the new subclass specific attribute\n",
+    "        self.IQ = IQ  \n",
+    "    def eat(self):\n",
+    "        #replace method\n",
+    "        return '{} is eating a donut.'.format(self.name) \n",
     "human2 = Human(\"Eva Smith\", 30, 60, 140) \n",
     "\n",
+    "print(human1)\n",
     "print(human2.IQ)\n",
-    "\n",
-    "```\n",
-    "\n",
-    "This now returns:\n",
-    "    \n",
-    "140\n",
-    "\n",
-    "\n",
-    "Adding methods for the child class is no different than adding methods for the parent class. It is not possible to remove inherited attributes, variables and methods from the sub class, as they do not exist in the sub class. But you can overwrite them:\n",
-    "\n",
-    "\n",
-    "```python\n",
-    "class Human(Gorilla):\n",
-    "    \n",
-    "    n = 2 #Overwriting the class variable\n",
-    "    \n",
-    "    def eat(self):\n",
-    "        return '{} is eating a donut.'.format(self.name) #instead of a banana\n",
-    "\n",
     "print(human1.eat())\n",
     "print(human1.bananacount())\n",
     "```\n",
     "This returns:\n",
-    "\n",
+    "  \n",
+    "\\<Adam Smith>,<35>,<70> \n",
+    "140\n",
     "Adam Smith is eating a donut.\n",
     "Adam Smith eats 2 bananas a day.\n",
     "\n",
