--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,20 +62,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "18"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def multiply(x,y):\n",
     "    z = x * y\n",
@@ -97,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +140,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,8 +160,8 @@
     "To create and use your own types and create objects of that type, all you need are three simple steps.\n",
     "\n",
     "<pre><code><div style=\"background-color:rgb(218, 255, 181)\">Step 1: Define a Class by initializing attributes\n",
-    "Step 3: Initialize Methods\n",
-    "Step 4: Instantiate Objects\n",
+    "Step 2: Initialize Methods\n",
+    "Step 3: Instantiate Objects\n",
     "</div></code></pre>\n",
     "\n",
     "To illustrate this process and what an object may be, imagine a troop of gorillas. The gorilla as an animalistic species has certain characteristics- a name, height, 2 arms and 2 legs. However exploring every individual gorilla, we find that some of those characteristics vary- for example one animal will be called George and weigh 150 kg, whereas another may be called Harry and weigh 190 kg. The specie is the general case of our beast, the class. The individual beast is an instance of our class. This generalization as a class of objects is similar to Plato's concept of the ideal chair that stands for all chairs, or in our case the \"ideal\" gorilla. \n",
@@ -185,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -280,11 +269,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_King Kong is a Gorilla.  \n",
-    "Donkey Kong is a Gorilla.  \n",
-    "King Kong is 15 years old, weighs 170 kg, and is 1.4 meters tall.  \n",
-    "Donkey Kong is 11 years old, weighs 210 kg, and is 1.6 meters tall._ \n",
-    "\n",
     "We have thus defined an object kingkong, which is a gorilla of name \"King Kong\", and 15 years of age.\n",
     "We have also defined donkeykong, a gorilla of name \"Donkey Kong\", 11 years of age. \n",
     "\n",
@@ -294,19 +278,19 @@
     "\n",
     "## Extrastep: Special Methods\n",
     "\n",
-    "Class functions that begins with double underscore __ are called special functions in Python. The __init__() function as seen above, is one of them. Using special functions, we can override built-in functions such as +, -, ==, len(), print and many others. "
+    "Class functions that begins with double underscore __ are called special functions in Python. The \\_&#95;init_\\_() function as seen above, is one of them. Using special functions, we can override built-in functions such as +, -, ==, len(), print and many others. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Gorilla2 object at 0x0000020DFA78CA90>\n"
+      "<__main__.Gorilla2 object at 0x00000205D56D1668>\n"
      ]
     }
    ],
@@ -326,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -367,17 +351,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/html": [
-       "\n",
+       "<center>\n",
        "<table>\n",
        "<thead>\n",
        "<tr>\n",
-       "<th>built in functions</th>\n",
+       "<th>Built in Functions</th>\n",
        "<th>Special Method</th>\n",
        "<th>Functionality</th>\n",
        "</tr>\n",
@@ -391,7 +377,7 @@
        "<tr>\n",
        "<td><strong>float(x)</strong></td>\n",
        "<td>__float(self)__</td>\n",
-       "<td>float equilavent of x</td>\n",
+       "<td>float equivalent of x</td>\n",
        "</tr>\n",
        "<tr>\n",
        "<td><strong>int(x)</strong></td>\n",
@@ -419,7 +405,27 @@
        "<td>iterator for x</td>\n",
        "</tr>\n",
        "</tbody>\n",
-       "</table>"
+       "</table>\n",
+       "\n",
+       "<!-- following script was found in pastebin https://pastebin.com/H77xP2vN for hiding all cells and needed to be adapted -->\n",
+       "<p align=\"left\">\n",
+       "<script>\n",
+       "code_show=true; \n",
+       "function code_toggle() {\n",
+       " if (code_show){\n",
+       " $('div.cell.code_cell.rendered.selected div.input').hide();\n",
+       " } else {\n",
+       " $('div.cell.code_cell.rendered.selected div.input').show();\n",
+       " }\n",
+       " code_show = !code_show\n",
+       "} \n",
+       "$().ready(code_toggle);\n",
+       "\n",
+       "</script>\n",
+       "<p style=\"text-align:left;\">\n",
+       "<a href=javascript:code_toggle()>Display table code</a>\n",
+       "<span style=\"float:right;\"><a href=\"http://www.yahoo.com\">Table source</a></span>\n",
+       "</p>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -430,12 +436,13 @@
     }
    ],
    "source": [
-    "%%html\n",
     "\n",
+    "%%html\n",
+    "<center>\n",
     "<table>\n",
     "<thead>\n",
     "<tr>\n",
-    "<th>built in functions</th>\n",
+    "<th>Built in Functions</th>\n",
     "<th>Special Method</th>\n",
     "<th>Functionality</th>\n",
     "</tr>\n",
@@ -449,7 +456,7 @@
     "<tr>\n",
     "<td><strong>float(x)</strong></td>\n",
     "<td>__float(self)__</td>\n",
-    "<td>float equilavent of x</td>\n",
+    "<td>float equivalent of x</td>\n",
     "</tr>\n",
     "<tr>\n",
     "<td><strong>int(x)</strong></td>\n",
@@ -477,7 +484,27 @@
     "<td>iterator for x</td>\n",
     "</tr>\n",
     "</tbody>\n",
-    "</table>"
+    "</table>\n",
+    "\n",
+    "<!-- following script was found in pastebin https://pastebin.com/H77xP2vN for hiding all cells and needed to be adapted -->\n",
+    "<p align=\"left\">\n",
+    "<script>\n",
+    "code_show=true; \n",
+    "function code_toggle() {\n",
+    " if (code_show){\n",
+    " $('div.cell.code_cell.rendered.selected div.input').hide();\n",
+    " } else {\n",
+    " $('div.cell.code_cell.rendered.selected div.input').show();\n",
+    " }\n",
+    " code_show = !code_show\n",
+    "} \n",
+    "$().ready(code_toggle);\n",
+    "\n",
+    "</script>\n",
+    "<p style=\"text-align:left;\">\n",
+    "<a href=javascript:code_toggle()>Display table code</a>\n",
+    "<span style=\"float:right;\"><a href=\"http://www.yahoo.com\">Table source</a></span>\n",
+    "</p>\n"
    ]
   },
   {
@@ -493,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -577,8 +604,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-27-cd5745e5cbb5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     27\u001b[0m         \u001b[1;31m#replace method\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[1;34m'{} is eating a donut.'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 29\u001b[1;33m \u001b[0mhuman1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mHuman\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Adam'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m28\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m70\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m175\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     30\u001b[0m \u001b[0mhuman2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mHuman\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Eva\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m30\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m60\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m170\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-27-cd5745e5cbb5>\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, name, age, weight, IQ)\u001b[0m\n\u001b[0;32m     21\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mIQ\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m         \u001b[1;31m#Calling the parents init methods\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m         \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     24\u001b[0m         \u001b[1;31m#Call the new subclass specific attribute\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mIQ\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mIQ\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-9-cd5745e5cbb5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     27\u001b[0m         \u001b[1;31m#replace method\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[1;34m'{} is eating a donut.'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 29\u001b[1;33m \u001b[0mhuman1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mHuman\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Adam'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m28\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m70\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m175\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     30\u001b[0m \u001b[0mhuman2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mHuman\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Eva\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m30\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m60\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m170\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-9-cd5745e5cbb5>\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, name, age, weight, IQ)\u001b[0m\n\u001b[0;32m     21\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mIQ\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m         \u001b[1;31m#Calling the parents init methods\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m         \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     24\u001b[0m         \u001b[1;31m#Call the new subclass specific attribute\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mIQ\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mIQ\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mTypeError\u001b[0m: __init__() takes 3 positional arguments but 4 were given"
      ]
     }
@@ -640,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -694,6 +721,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
